[MM-128] Fix text overflow in ticket link tooltip description (#1020)

--- a/webapp/src/components/jira_ticket_tooltip/ticketStyle.scss
+++ b/webapp/src/components/jira_ticket_tooltip/ticketStyle.scss
@@ -111,6 +111,7 @@
         line-height: 1.5;
         width: 300px;
         text-overflow: ellipsis;
+        word-break: break-word;
     }
 
     .popover-body__description>p {
